@@ -7,6 +7,10 @@
   Olaf: add write_proc.
   Olaf: lines in depends can now be commented out with a #
   Olaf: add a method to clear dead services (mark as terminated)
+  minit now checks whether a PID actually exists before accepting msvc -P
+    this removes a race condition when the forked service terminates
+    before pidfilehack notifies minit of the PID
+  msvc now accepts more than one service after -o, -d, ...
 
 0.8:
   call waitpid repeatedly until it returns "no children".
